chore(swagger): Acerto em gerarGuiaRetorno e no controller
