# swagger.json
@@ -1,1 +1,275 @@
-{"swagger":"2.0","info":{"description":"API de consultas aos debitos no DETRAN-ES","version":"0.2.1","title":"api-detran-debitos"},"basePath":"/","tags":[{"name":"veiculos-debitos","description":""}],"schemes":["https"],"paths":{"/veiculos/{placa}/{renavam}":{"get":{"summary":"Dados do veiculo","description":"retorna os dados do veiculo através do WebService InternetBanking","parameters":[{"name":"renavam","required":true,"in":"path","description":"Renavam do veiculo.","type":""},{"name":"placa","required":true,"in":"path","description":"Placa do veiculo","type":""}],"responses":{"200":{"description":"Retorna informações do veiculo ","schema":{"$ref":"#/definitions/VeiculoRetorno"}},"403":{"description":"Retorna uma MensagemErro"}},"tags":["veiculos-debitos"],"produces":["application/json"],"consumes":["application/json"]}},"/veiculos/{placa}/{renavam}/debitos":{"get":{"summary":"Débitos do veiculo","description":"retorna uma lista com os débitos do veiculo","parameters":[{"name":"renavam","required":true,"in":"path","description":"Renavam do veiculo","type":""},{"name":"placa","required":true,"in":"path","description":"Placa do veiculo","type":""}],"responses":{"200":{"description":"Veiculo encontrado, retorna um array de debitos","schema":{"$ref":"#/definitions/Debito"}},"403":{"description":"Retorna uma MensagemErro"}},"tags":["veiculos-debitos"],"produces":["application/json"],"consumes":["application/json"]}},"/veiculos/{placa}/{renavam}/debitos-preview":{"get":{"summary":"Prévia dos débitos do veiculo","description":"Retorna uma previa dos débitos do veiculo","parameters":[{"name":"renavam","required":true,"in":"path","description":"Renavam do veiculo","type":""},{"name":"placa","required":true,"in":"path","description":"Placa do veiculo","type":""}],"responses":{"200":{"description":"Veiculo encontrado, retorna um array de debitos","schema":{"$ref":"#/definitions/TipoDebito"}},"403":{"description":"Retorna uma MensagemErro"}},"tags":["veiculos-debitos"],"produces":["application/json"],"consumes":["application/json"]}},"/veiculos/{placa}/{renavam}/debitos-tipo/{tipo_debito}":{"get":{"summary":"Prévia dos débitos do veiculo","description":"Retorna uma lista de um tipo de débitos do veiculo","parameters":[{"name":"tipo_debito","required":true,"in":"path","description":"Tipo de debitos","type":""},{"name":"renavam","required":true,"in":"path","description":"Renavam do veiculo","type":""},{"name":"placa","required":true,"in":"path","description":"Placa do veiculo","type":""}],"responses":{"200":{"description":"Veiculo encontrado, retorna um array de debitos","schema":{"$ref":"#/definitions/Debito"}},"403":{"description":"Retorna uma MensagemErro"}},"tags":["veiculos-debitos"],"produces":["application/json"],"consumes":["application/json"]}},"/veiculos/{placa}/{renavam}/debitos/guia":{"get":{"summary":"Gerar GRU de todos os débitos","description":"Retornar uma GRU com todos os debitos ","parameters":[{"name":"renavam","required":true,"in":"path","description":"Renavam do veiculo","type":""},{"name":"placa","required":true,"in":"path","description":"Placa do veiculo","type":""}],"responses":{"200":{"description":"Veiculo encontrado, retorna o um array de itens com o pdf do boleto","schema":{"$ref":"#/definitions/DebitoRetorno"}},"403":{"description":"Retorna uma MensagemErro"}},"tags":["veiculos-debitos"],"produces":["application/json"],"consumes":["application/json"]}}},"definitions":{"VeiculoRetorno":{"type":"object","properties":{"placa":{"type":"string"},"modelo":{"type":"string"},"renavam":{"type":"number"},"mensagemErro":{"type":"string"}},"required":["placa","modelo","renavam","mensagemErro"]},"Debito":{"type":"object","properties":{"classe":{"type":"number"},"codigoServico":{"type":"number"},"descricaoServico":{"type":"string"},"dataVencimento":{"type":"string"},"exercicio":{"type":"number"},"idDebito":{"type":"number"},"parcela":{"type":"number"},"placa":{"type":"string"},"valorAtualizadoFranquia":{"type":"number"},"dpvatAnterior":{"type":"number"},"dpvatCotas":{"type":"string"},"dpvatExercicio":{"type":"number"},"ipvaAnterior":{"type":"number"},"ipvaExercicio":{"type":"number"},"ipvaParcelamento":{"type":"number"},"licenciamentoAnterior":{"type":"number"},"licenciamentoExercicio":{"type":"number"},"multas":{"type":"number"},"taxaEspecial":{"type":"number"},"taxaPatio":{"type":"number"},"taxaServico":{"type":"number"},"ipvaCotas":{"type":"string"}},"required":["classe","codigoServico","descricaoServico","dataVencimento","exercicio","idDebito","parcela","placa","valorAtualizadoFranquia","dpvatAnterior","dpvatCotas","dpvatExercicio","ipvaAnterior","ipvaExercicio","ipvaParcelamento","licenciamentoAnterior","licenciamentoExercicio","multas","taxaEspecial","taxaPatio","taxaServico","ipvaCotas"]},"TipoDebito":{"type":"object","properties":{"temLicenciamentoAnual":{"type":"string"},"temLicenciamentoAnterior":{"type":"string"},"temDPVAT":{"type":"string"},"temIPVA":{"type":"string"},"temMulta":{"type":"string"},"temIPVAAnterior":{"type":"string"},"temDPVATAnterior":{"type":"string"},"mensagemErro":{"type":"string"}},"required":["temLicenciamentoAnual","temLicenciamentoAnterior","temDPVAT","temIPVA","temMulta","temIPVAAnterior","temDPVATAnterior","mensagemErro"]},"DebitoRetorno":{"type":"object","properties":{"debitos":{"type":"array","items":{"type":"string"}},"mensagemErro":{"type":"string"}},"required":["debitos","mensagemErro"]}}}
+{
+  "swagger": "2.0",
+  "info": {
+    "description": "API de consultas aos debitos no DETRAN-ES",
+    "version": "0.2.1",
+    "title": "api-detran-debitos"
+  },
+  "basePath": "/",
+  "tags": [{ "name": "veiculos-debitos", "description": "" }],
+  "schemes": ["http"],
+  "paths": {
+    "/veiculos/{placa}/{renavam}": {
+      "get": {
+        "summary": "Dados do veiculo",
+        "description": "retorna os dados do veiculo através do WebService InternetBanking",
+        "parameters": [
+          {
+            "name": "renavam",
+            "required": true,
+            "in": "path",
+            "description": "Renavam do veiculo.",
+            "type": ""
+          },
+          {
+            "name": "placa",
+            "required": true,
+            "in": "path",
+            "description": "Placa do veiculo",
+            "type": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Retorna informações do veiculo ",
+            "schema": { "$ref": "#/definitions/VeiculoRetorno" }
+          },
+          "403": { "description": "Retorna uma MensagemErro" }
+        },
+        "tags": ["veiculos-debitos"],
+        "produces": ["application/json"],
+        "consumes": ["application/json"]
+      }
+    },
+    "/veiculos/{placa}/{renavam}/debitos": {
+      "get": {
+        "summary": "Débitos do veiculo",
+        "description": "retorna uma lista com os débitos do veiculo",
+        "parameters": [
+          {
+            "name": "renavam",
+            "required": true,
+            "in": "path",
+            "description": "Renavam do veiculo",
+            "type": ""
+          },
+          {
+            "name": "placa",
+            "required": true,
+            "in": "path",
+            "description": "Placa do veiculo",
+            "type": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Veiculo encontrado, retorna um array de debitos",
+            "schema": { "$ref": "#/definitions/Debito" }
+          },
+          "403": { "description": "Retorna uma MensagemErro" }
+        },
+        "tags": ["veiculos-debitos"],
+        "produces": ["application/json"],
+        "consumes": ["application/json"]
+      }
+    },
+    "/veiculos/{placa}/{renavam}/debitos-preview": {
+      "get": {
+        "summary": "Prévia dos débitos do veiculo",
+        "description": "Retorna uma previa dos débitos do veiculo",
+        "parameters": [
+          {
+            "name": "renavam",
+            "required": true,
+            "in": "path",
+            "description": "Renavam do veiculo",
+            "type": ""
+          },
+          {
+            "name": "placa",
+            "required": true,
+            "in": "path",
+            "description": "Placa do veiculo",
+            "type": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Veiculo encontrado, retorna um array de debitos",
+            "schema": { "$ref": "#/definitions/TipoDebito" }
+          },
+          "403": { "description": "Retorna uma MensagemErro" }
+        },
+        "tags": ["veiculos-debitos"],
+        "produces": ["application/json"],
+        "consumes": ["application/json"]
+      }
+    },
+    "/veiculos/{placa}/{renavam}/debitos-tipo/{tipo_debito}": {
+      "get": {
+        "summary": "Prévia dos débitos do veiculo",
+        "description": "Retorna uma lista de um tipo de débitos do veiculo",
+        "parameters": [
+          {
+            "name": "tipo_debito",
+            "required": true,
+            "in": "path",
+            "description": "Tipo de debitos",
+            "type": ""
+          },
+          {
+            "name": "renavam",
+            "required": true,
+            "in": "path",
+            "description": "Renavam do veiculo",
+            "type": ""
+          },
+          {
+            "name": "placa",
+            "required": true,
+            "in": "path",
+            "description": "Placa do veiculo",
+            "type": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Veiculo encontrado, retorna um array de debitos",
+            "schema": { "$ref": "#/definitions/Debito" }
+          },
+          "403": { "description": "Retorna uma MensagemErro" }
+        },
+        "tags": ["veiculos-debitos"],
+        "produces": ["application/json"],
+        "consumes": ["application/json"]
+      }
+    },
+    "/veiculos/{placa}/{renavam}/debitos/guia": {
+      "get": {
+        "summary": "Gerar GRU de todos os débitos",
+        "description": "Retornar uma GRU com todos os debitos ",
+        "parameters": [
+          {
+            "name": "renavam",
+            "required": true,
+            "in": "path",
+            "description": "Renavam do veiculo",
+            "type": ""
+          },
+          {
+            "name": "placa",
+            "required": true,
+            "in": "path",
+            "description": "Placa do veiculo",
+            "type": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Veiculo encontrado, retorna o um array de itens e o pdf do boleto, em base64",
+            "schema": { "$ref": "#/definitions/GerarGuiaRetorno" }
+          },
+          "403": { "description": "Retorna uma MensagemErro" }
+        },
+        "tags": ["veiculos-debitos"],
+        "produces": ["application/json"],
+        "consumes": ["application/json"]
+      }
+    }
+  },
+  "definitions": {
+    "VeiculoRetorno": {
+      "type": "object",
+      "properties": {
+        "placa": { "type": "string" },
+        "modelo": { "type": "string" },
+        "renavam": { "type": "number" },
+        "mensagemErro": { "type": "string" }
+      },
+      "required": ["placa", "modelo", "renavam", "mensagemErro"]
+    },
+    "Debito": {
+      "type": "object",
+      "properties": {
+        "classe": { "type": "number" },
+        "codigoServico": { "type": "number" },
+        "descricaoServico": { "type": "string" },
+        "dataVencimento": { "type": "string" },
+        "exercicio": { "type": "number" },
+        "idDebito": { "type": "number" },
+        "parcela": { "type": "number" },
+        "placa": { "type": "string" },
+        "valorAtualizadoFranquia": { "type": "number" },
+        "dpvatAnterior": { "type": "number" },
+        "dpvatCotas": { "type": "string" },
+        "dpvatExercicio": { "type": "number" },
+        "ipvaAnterior": { "type": "number" },
+        "ipvaExercicio": { "type": "number" },
+        "ipvaParcelamento": { "type": "number" },
+        "licenciamentoAnterior": { "type": "number" },
+        "licenciamentoExercicio": { "type": "number" },
+        "multas": { "type": "number" },
+        "taxaEspecial": { "type": "number" },
+        "taxaPatio": { "type": "number" },
+        "taxaServico": { "type": "number" },
+        "ipvaCotas": { "type": "string" }
+      },
+      "required": [
+        "classe",
+        "codigoServico",
+        "descricaoServico",
+        "dataVencimento",
+        "exercicio",
+        "idDebito",
+        "parcela",
+        "placa",
+        "valorAtualizadoFranquia",
+        "dpvatAnterior",
+        "dpvatCotas",
+        "dpvatExercicio",
+        "ipvaAnterior",
+        "ipvaExercicio",
+        "ipvaParcelamento",
+        "licenciamentoAnterior",
+        "licenciamentoExercicio",
+        "multas",
+        "taxaEspecial",
+        "taxaPatio",
+        "taxaServico",
+        "ipvaCotas"
+      ]
+    },
+    "TipoDebito": {
+      "type": "object",
+      "properties": {
+        "temLicenciamentoAnual": { "type": "string" },
+        "temLicenciamentoAnterior": { "type": "string" },
+        "temDPVAT": { "type": "string" },
+        "temIPVA": { "type": "string" },
+        "temMulta": { "type": "string" },
+        "temIPVAAnterior": { "type": "string" },
+        "temDPVATAnterior": { "type": "string" },
+        "mensagemErro": { "type": "string" }
+      },
+      "required": [
+        "temLicenciamentoAnual",
+        "temLicenciamentoAnterior",
+        "temDPVAT",
+        "temIPVA",
+        "temMulta",
+        "temIPVAAnterior",
+        "temDPVATAnterior",
+        "mensagemErro"
+      ]
+    },
+    "GerarGuiaRetorno": {
+      "type": "object",
+      "properties": {
+        "itensGuia": { "type": "array", "items": { "type": "string" } },
+        "mensagemErro": { "type": "string" },
+        "guiaPDF": { "type": "string" }
+      },
+      "required": ["itensGuia", "mensagemErro", "guiaPDF"]
+    }
+  }
+}
